codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__apps_popup_loading_state.snap
---
source: tui/src/chatwidget/tests.rs
expression: before
---
  Приложения
  Загружаю установленные и доступные приложения...

›    Загружаю приложения...  Список обновится, когда загрузятся все доступные
                             приложения.
